# libnest2d

./: .gitignore  CMakeLists.txt  conandata.yml  conanfile.py  requirements.txt
.github/workflows/: conan-package.yml  npm-package.yml  package.yml
include/libnest2d/: parallel.hpp
include/libnest2d/backends/clipper/: CMakeLists.txt
libnest2d_js/: CMakeLists.txt  libnest2d_js.cpp
src/: libnest2d_js.cpp
test_package/: conanfile.py
tests/: test.cpp
